feat: create endpoint to fetch loading_experience and measure loading experience of a website

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=metrics.api
+spring.application.name=pagespeed
 server.port=8085
 management.endpoints.web.exposure.include=health,info
 management.info.env.enabled=true
